--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: 'Times New Roman', Courier, monospace;
+
+  background-image: url("background.jpg");
+  background-size: 1920px 1080px
+}
+button {
+  cursor: pointer;
 }
 
 code {
