--- a/src/App.css
+++ b/src/App.css
@@ -11,12 +11,16 @@ h1 {
   color:  #03c6fc;
 }
 
+
 .container {  
   margin: 75px auto;
   max-width: 500px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
+.defaultcursor {
+  cursor: default;
+}
 .bottom {
    margin-bottom: 25px;
 }
@@ -29,6 +33,7 @@ left:0
 
 .zzz {
   z-index: 999;
+
 }
 
 #content_cont h1 { margin-top:0; }
@@ -37,54 +42,18 @@ left:0
 }
 
 body {
-
     padding-bottom: 82px;
-
 }
 .Particles {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   z-index: -1;
 
+
 }
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
